Sun Dec 09 22:35:26 2001  George Lebl <jirka@5z.com>

	* Makefile.am, title-item*.(c|h|gob):  Title item no longer needed,
	  so removed

	* applet.c: a bit of gdkpixbuf fixage

	* foobar-widget.c: Some warning fixes, also reposition task menu
	  on show, Fix icon unreffage issues, look for default task icon
	  better, when no windows are present add 'No windows open'
 	  insensitive item to the task menu, Actually show the icon on
	  the menu, and strech events for the task item to the right
	  corner

	* panel-util.[ch], foobar-widget.c: add _while_alive wrappers
	  that are sort of like the gtk ones but for GObjects

	* menu.c: gtk_signal_* excorcism

	* xstuff.[ch], gnome-run.c, launcher.c, menu.c, menu-properties.c,
	  panel_config.c: Add a function to show/raise/move to current
	  workspace for windows and use it for all the dialogs where
	  we only always have one copy of.  So that say the run dialog
	  will appear on your workspace even if it's open on another
	  one already

	* session.c: add to the auto-update-menus conversation warning

2001-12-09  Anders Carlsson  <andersca@gnu.org>

	* menu.c (get_panel_from_menu_data): Use gtk_menu_get_attach_widget
	to traverse up in the menu hierchary. Thanks to Owen Taylor for
	suggesting this.

	* applet.c: (panel_applet_add_callback), (setup_an_item),
	(applet_setup_panel_menu), (panel_applet_create_menu):
	Ref/Sink our menu, scale the panel menu icon.
	
	* main.c: (main): Don't respawn if I_LOVE_PANEL_CRACK is set.
	
	* menu.c: (setup_full_menuitem): gtk_widget_show our image.
	
	* panel.c: (drop_urilist): Implement so we can dnd urls to the panel.

Sun Dec 09 03:34:18 2001  George Lebl <jirka@5z.com>

	* Makefile.am, tasklist_icon.[ch], foobar-widget.c, main.c, menu.c,
	  xstuff.c: remove the gwmh and gstc hack stuff and remove them from
	  build and also remove the tasklist_icon.[ch] as well.  We use
	  libwnck now:)

Sun Dec 09 03:25:13 2001  George Lebl <jirka@5z.com>
